--- a/wednesday/styles.css
+++ b/wednesday/styles.css
@@ -13,6 +13,19 @@ a {
     background-color: white;
     display: inline-block;
     padding: 0.5rem;
+    margin: 0.5rem 0.25rem;
     border-radius: 0.5rem;
-    box-shadow: 1rem 1rem 1rem #00000088;
+    box-shadow: 0.5rem 0.5rem 0.95rem #00000088;
+}
+
+a:hover{
+    background-color: goldenrod;
+    box-shadow: 0.5rem 0.5rem 0.95rem #000000ff;
+}
+
+.fun
+{
+    width: 100%;
+    border-radius: 3rem;
+    box-shadow: 0.5rem 0.5rem 0.95rem #00000088;
 }
